@@ -36,7 +36,7 @@
     <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
-      <version>3.0.1</version>
+      <version>3.1</version>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
@@ -106,7 +106,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.5</version>
+      <version>4.8.1</version>
     </dependency>
     <dependency>
       <groupId>hsqldb</groupId>
@@ -121,7 +121,19 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>avro</artifactId>
-      <version>1.3.0</version>
+      <version>1.3.2</version>
+      <exclusions>
+        <exclusion>
+          <!-- Don't pull in Avro's (later) version of Jetty.-->
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>jetty</artifactId>
+        </exclusion>
+        <exclusion>
+          <!-- Exclude Avro's version of ant since it conflicts with Jetty's.-->
+          <groupId>org.apache.ant</groupId>
+          <artifactId>ant</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 </project>
