@@ -14,7 +14,6 @@
 #It drives ivy and the generation of a maven POM
 
 #These are the versions of our dependencies (in alphabetical order)
-apacheant.version=1.7.1
 ant-task.version=2.0.10
 
 avro.version=1.3.2
@@ -25,8 +24,8 @@ commons-cli.version=1.2
 commons-cli2.version=2.0-mahout
 commons-codec.version=1.4
 commons-collections.version=3.1
-commons-httpclient.version=3.0.1
-commons-lang.version=2.4
+commons-httpclient.version=3.1
+commons-lang.version=2.5
 commons-logging.version=1.1.1
 commons-logging-api.version=1.1
 commons-el.version=1.0
@@ -50,7 +49,7 @@ jsp-api.version=5.5.12
 jets3t.version=0.7.1
 jetty.version=6.1.14
 jetty-util.version=6.1.14
-junit.version=4.5
+junit.version=4.8.1
 jdiff.version=1.0.9
 json.version=1.0
 
@@ -68,13 +67,13 @@ rats-lib.version=0.6
 servlet.version=4.0.6
 servlet-api-2.5.version=6.1.14
 servlet-api.version=2.5
-slf4j-api.version=1.4.3
-slf4j-log4j12.version=1.4.3
+slf4j-api.version=1.5.11
+slf4j-log4j12.version=1.5.11
 
 xmlenc.version=0.52
 xerces.version=1.4.4
 
 aspectj.version=1.6.5
 
-mockito-all.version=1.8.0
+mockito-all.version=1.8.2
 
